--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
     <html lang="en">
       <head>
         <meta charset="utf-8" />
@@ -23,7 +23,7 @@
             </form>
           </section>
           <section id="results-list" class="hidden">
-            <p>Here are your park results</p>
+           <h3><p>Here are your park results</p></h3> 
           </section>
         </main>
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
