--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </form>
           </section>
           <section id="results-list" class="hidden">
-           <h3><p>Here are your park results</p></h3> 
+           <h3>Here are your park results</h3> 
           </section>
         </main>
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
