--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               
               <input type="text" id="state-name-input" class="form-control" placeholder="Enter a state" />
               <br />
-              <input type="text" id="number-input" class="form-control" placeholder="Default 10 park results" />
+              <input type="number" id="number-input" class="form-control" placeholder="10" />
               <br />
               <input id="submit-button" class="btn btn-primary" type="submit" value="Submit" />
             </form>
